log
Thu, Oct  2, 2025 11:24:45 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Thu, Oct  2, 2025 11:33:18 PM: 
 sudoku.c | 65 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 62 insertions(+), 3 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:128:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
56d16c4
Thu, Oct  2, 2025 11:33:46 PM: 
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:128:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
9b8954d
Thu, Oct  2, 2025 11:33:56 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
a4fca5d
Sat, Oct  4, 2025  4:11:42 PM: 
 sudoku.c | 32 ++++++++++++++++++++++++++++----
 1 file changed, 28 insertions(+), 4 deletions(-)
 tests:  10|0
total_score: 70/70
9590359
Sat, Oct  4, 2025  4:41:38 PM: 
 sudoku.c | 60 +++++++++++++++++++++++++++++++++++++-----------------------
 1 file changed, 37 insertions(+), 23 deletions(-)
 tests:  10|0
total_score: 70/70
c8cf139
Sun, Oct  5, 2025  8:25:17 PM: 
 sudoku.c | 32 ++++++++++++++++----------------
 1 file changed, 16 insertions(+), 16 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:114:34: error: 'list' undeclared (first use in this function)
                         pushBack(list, nuevo);
                                  ^~~~
sudoku.c:114:34: note: each undeclared identifier is reported only once for each function it appears in
9f369c3
